--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
                         <!--/@FIXME: 图标展示-->
                         <div class="tab-pane fade" id="about-link">                            
                             <!--百度地图容器-->
-                            <div style="height:350px;border:#ccc solid 1px;" class="" id="dituContent"></div>
+                            <div style="height:350px;border:#ccc solid 1px;" class="hide" id="dituContent"></div>
                             <p class="">地址：北京市东城区东长安街1号东方广场东2 办公楼19 层</p>
                             <p class="hide">电话：010-85200310</p>
                             <p class="hide">联系人：</p>
@@ -1102,7 +1102,7 @@ $(function () {
 
     routie('index');
     // tab
-    initMap();//创建和初始化地图
+    //initMap();//创建和初始化地图
 });
 </script>
 </body>
