update slide to v1.5

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
         <section class="slider flex-container">
             <div class="flexslider flex-container">
                 <ul class="slides">
-                    <!-- (li>img[src="assets/img/slides/slide-0$.jpg"])*5 -->
-                    <li><img src="assets/img/slides/slide-01.jpg" alt=""></li>
-                    <li><img src="assets/img/slides/slide-02.jpg" alt=""></li>
-                    <li><img src="assets/img/slides/slide-03.jpg" alt=""></li>
-                    <li><img src="assets/img/slides/slide-04.jpg" alt=""></li>
-                    <li><img src="assets/img/slides/slide-05.jpg" alt=""></li>
+                    <!-- (li>img[src="assets/img/slides/v1.5//slide-0$.jpg"])*5 -->
+                    <li><img src="assets/img/slides/v1.5//slide-01.jpg" alt=""></li>
+                    <li><img src="assets/img/slides/v1.5//slide-02.jpg" alt=""></li>
+                    <li><img src="assets/img/slides/v1.5//slide-03.jpg" alt=""></li>
+                    <li><img src="assets/img/slides/v1.5//slide-04.jpg" alt=""></li>
+                    <li><img src="assets/img/slides/v1.5//slide-05.jpg" alt=""></li>
                 </ul>
             </div>
         </section>
