--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                     iThinkCool思酷-企业级大数据创新平台
                                 </a>
                             </li>
-                            <li class="hide" role="presentation">
+                            <li class="" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
                                    data-target="#product-iMaya"
                                    aria-controls="product-iMaya"
@@ -196,7 +196,7 @@
                                     iMaya
                                 </a>
                             </li>
-                            <li class="hide" role="presentation">
+                            <li class="" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
                                    data-target="#product-iMammoth"
                                    aria-controls="product-iMammoth"
@@ -204,7 +204,7 @@
                                     iMammoth
                                 </a>
                             </li>
-                            <li class="" role="presentation">
+                            <li class="hide" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
                                    data-target="#product-iDataCool"
                                    aria-controls="product-iDataCool"
@@ -341,7 +341,7 @@
                 <div class="row">
                     <div class="col-xs-2 col-md-3">
                         <ul class="nav nav-tabs nav-stacked" role="tablist">
-                            <li class="active" role="presentation">
+                            <li class="hide" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
                                    data-target="#service-productTool"
                                    aria-controls="service-productTool"
@@ -788,7 +788,7 @@
                         <div class="tab-pane fade" id="about-link">                            
                             <!--百度地图容器-->
                             <div style="height:350px;border:#ccc solid 1px;" class="hide" id="dituContent"></div>
-                            <p class="">地址：北京市东城区东长安街1号东方广场东2 办公楼19 层</p>
+                            <p class="">联系我们：北京市东城区东长安街1号东方广场东2 办公楼19层1901室。</p>
                             <p class="hide">电话：010-85200310</p>
                             <p class="hide">联系人：</p>
                             <p>邮件：
