slides,has 5 pics,5th,keep

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <li><img src="assets/img/slides/v1.5//slide-02.jpg" alt=""></li>
                     <li><img src="assets/img/slides/v1.5//slide-03.jpg" alt=""></li>
                     <li><img src="assets/img/slides/v1.5//slide-04.jpg" alt=""></li>
-                    <!--<li><img src="assets/img/slides/v1.5//slide-05.jpg" alt=""></li>-->
+                    <li><img src="assets/img/slides/v1.5//slide-05.jpg" alt=""></li>
                 </ul>
             </div>
         </section>
